Horizontal scrolling fixes for mobile

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -116,3 +116,11 @@ input:focus::placeholder {
 .usa-input-error {
   position: static;
 }
+
+// Provide a better horizontal scroll for wide tables on a mobile layout
+.table-wrapper {
+  margin-left: -16px;
+  overflow-x: scroll;
+  padding: 0 16px;
+  width: calc(100% + 32px);
+}
